Uploaded image for project: 'Apache NiFi MiNiFi C++'
  1. Apache NiFi MiNiFi C++
  2. MINIFICPP-2008

Cron driven processors should rerun if the onTrigger failed due to exception

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • 0.14.0
    • None

    Description

      CronDrivenSchedulingAgent saves the time-point of the onTrigger, it wont rerun the processor until the next execution time based on the cron statement.
       
      If the processor throws an exception the processor should be retried again until the yield period passed, and only save the time-point of the onTrigger if successful.

      Attachments

        Activity

          People

            MZink Martin Zink
            MZink Martin Zink
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0h
                0h
                Logged:
                Time Spent - 1h 10m
                1h 10m