MINIFICPP-2008 Differentiate successful onTriggers from throwing onTriggers in ScheduleAgents